--- a/cadastrobd/pom.xml
+++ b/cadastrobd/pom.xml
@@ -5,6 +5,22 @@
     <artifactId>cadastrobd</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    
+    <dependencies>
+        <!-- JDBC Driver for SQL Server -->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.2.0.jre11</version>
+        </dependency>
+    </dependencies>
+
+    <repositories>
+        <repository>
+            <id>microsoft</id>
+            <url>https://maven.microsoft.com/repository/maven-public/</url>
+        </repository>
+    </repositories>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>22</maven.compiler.source>
